test/classes/nilability/error-question-nonclass.good
error-question-nonclass.chpl:13: error: postfix-? is not allowed on a non-class type 'int(64)'
error-question-nonclass.chpl:14: error: postfix-? is not allowed on a non-class type 'domain(1,int(64),false)'
error-question-nonclass.chpl:15: error: postfix-? is not allowed on a non-class type '[domain(1,int(64),false)] int(64)'
error-question-nonclass.chpl:16: error: postfix-? is not allowed on a non-class type 'R'
error-question-nonclass.chpl:17: error: postfix-? is not allowed on a non-class type 'domain(1,int(64),false)'
error-question-nonclass.chpl:18: error: postfix-? is not allowed on a non-class type '[domain(1,int(64),false)] int(64)'
error-question-nonclass.chpl:20: error: postfix-? is not allowed on a non-class type 'int(64)'
error-question-nonclass.chpl:21: error: postfix-? is not allowed on a non-class type 'domain(1,int(64),false)'
error-question-nonclass.chpl:22: error: postfix-? is not allowed on a non-class type '[domain(1,int(64),false)] int(64)'
error-question-nonclass.chpl:23: error: postfix-? is not allowed on a non-class type 'R'
